--- a/index.html
+++ b/index.html
@@ -17,69 +17,70 @@
 			asdasd
 		</div>
 		<div class="desktop-header hidden-xs">
-			<div class="container-fluid">
-				<div class="top-header">
-					<div class="row">
-						<div class="col-sm-6">
-							<div class="topl-menu">
-								<nav>
-									<ul>
-										<li class="active ripple"><a href="#">Доставка</a></li>
-										<li class="ripple"><a href="#">Кафе</a></li>
-									</ul>
-								</nav>
-							</div>
-						</div>
-						<div class="col-sm-6">
-							<div class="topr-menu">
-								<ul>
-									<li>
-										<a href="#">
-											<span class="menu-icon">
-												<img src="images/icons/location-pin.svg" alt="">
-											</span>
-											Районы доставки
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<span class="menu-icon">
-												<img src="images/icons/callback-icon.svg" alt="">
-											</span>
-											Обратная связь
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<span class="menu-icon">
-												<img src="images/icons/secret-icon.svg" alt="">
-											</span>
-											Стать тайным покупателем
-										</a>
-									</li>
-								</ul>
-							</div>
-							<div class="about-menu-btn">
-								<div class="about-menu">
-									<span class="icons-box">
-										<span class="line-icon"></span>
-										<span class="line-icon"></span>
-										<span class="line-icon"></span>
-									</span>
-									О нас
-								</div>
-								<div class="modal from-right">
-									<div class="">
-								</div>
-							</div>
-						</div>
+			<div class="top-header">
+				<div class="topl-menu">
+					<nav>
+						<ul>
+							<li class="active ripple"><a href="#">Доставка</a></li>
+							<li class="ripple"><a href="#">Кафе</a></li>
+						</ul>
+					</nav>
+				</div>
+				<div class="about-menu-btn">
+					<div class="about-menu">
+						<span class="icons-box">
+							<span class="line-icon"></span>
+							<span class="line-icon"></span>
+							<span class="line-icon"></span>
+						</span>
+						О нас
+					</div>
+					<div class="modal from-right">
+						<div class=""></div>
 					</div>
 				</div>
+				<div class="topr-menu">
+					<ul>
+						<li>
+							<a href="#">
+								<span class="menu-icon">
+									<img src="images/icons/location-pin.svg" alt="">
+								</span>
+								Районы доставки
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<span class="menu-icon">
+									<img src="images/icons/callback-icon.svg" alt="">
+								</span>
+								Обратная связь
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<span class="menu-icon">
+									<img src="images/icons/secret-icon.svg" alt="">
+								</span>
+								Стать тайным покупателем
+							</a>
+						</li>
+					</ul>
+				</div>
+				
 			</div>
-			<div class="s-head">
-				<div></div>
+			<div class="s-header">
+				<div class="logo">
+					<a href="#">
+						<img src="images/logo.svg" alt="">
+					</a>
+				</div>
+				<div class="s-help-text">Доставим за 60 минут<br>или пицца бесплатно
+				</div>
 			</div>
 		</div>
+			
+		
 	</header>
 </body>
 </html>
