--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
 						<img src="images/logo.svg" alt="">
 					</a>
 				</div>
-				<div class="s-help-text">Доставим за 60 минут<br>или пицца бесплатно
+				<div class="s-help-text">Доставим за 60 минут<br>или пицца бесплатно</div>
+				<div class="beep-icon">
+					<img src="images/icons/beep-motherfucker.svg" alt="">
 				</div>
 			</div>
 		</div>
