--- a/index.html
+++ b/index.html
@@ -83,6 +83,20 @@
 				<div class="beep-icon">
 					<img src="images/icons/beep-motherfucker.svg" alt="">
 				</div>
+				<div class="s-right-info">
+					<div class="promo-box ripple">
+						<div class="promo-btn">Промо-код</div>
+					</div>
+					<div class="s-col-info">
+						<div class="ph-head">
+							<a href="tel:83412500040" class="ph-head-link">8 (3412) 500-040</a>
+						</div>
+						<div class="s-today">Сегодня работаем до 23:00</div>
+					</div>
+					<div class="s-callback-btn">
+						<div class="s-callback-box">Заказ звонка оператора</div>
+					</div>
+				</div>
 			</div>
 		</div>
 			
