--- a/index.html
+++ b/index.html
@@ -107,16 +107,16 @@
 					<div class="meal-menu">
 						<nav>
 							<ul>
-								<li class="active"><a href="#" data-menu="1">Пиццы</a></li>
+								<li class="active"><a href="#pizza" data-menu="1">Пиццы</a></li>
 								<li><a href="#" data-menu="2">Комбо</a></li>
 								<li><a href="#" data-menu="3">Напитки</a></li>
-								<li><a href="#" data-menu="4">Салаты</a></li>
-								<li><a href="#" data-menu="5">Десерты</a></li>
+								<li><a href="#salad" data-menu="4">Салаты</a></li>
+								<li><a href="#dessert" data-menu="5">Десерты</a></li>
 								<li><a href="#" data-menu="6">Закуски</a></li>
 								<li><a href="#" data-menu="7">Соусы</a></li>
 							</ul>
 						</nav>
-						<!--аттрибут data-menu используется для прокрутки до категории там будет аттрибут data-category-->
+						<!--атрибут data-menu используется для прокрутки до категории там будет атрибут data-category-->
 					</div>
 					<div class="stock-box">
 						<a href="#" class="stock-link">
@@ -211,8 +211,8 @@
 		</div>
 	</div>
 	<div class="category-row" data-color="e54b21" data-background="fff4e4" data-category="1">
-	<!--аттрибут data-color - для цвета фильтра и кнопки "В корзину", присваивается для этих элементов в файле scripts/main.js !!! указывается в hex без решетки-->
-	<!--аттрибут data-category - см. data-menu-->
+	<!--атрибут data-color - для цвета фильтра и кнопки "В корзину", присваивается для этих элементов в файле scripts/main.js !!! указывается в hex без решетки-->
+	<!--атрибут data-category - см. data-menu-->
 		<div class="category-out">
 			<div class="category-in">
 				<div class="category-left">
@@ -442,8 +442,8 @@
 		</div>
 	</div>
 	<div class="category-row" data-color="00b5af" data-background="e3f8f7" data-category="4">
-	<!--аттрибут data-color - для цвета фильтра и кнопки "В корзину", присваивается для этих элементов в файле scripts/main.js !!! указывается в hex без решетки-->
-	<!--аттрибут data-category - см. data-menu-->
+	<!--атрибут data-color - для цвета фильтра и кнопки "В корзину", присваивается для этих элементов в файле scripts/main.js !!! указывается в hex без решетки-->
+	<!--атрибут data-category - см. data-menu-->
 		<div class="category-out">
 			<div class="category-in">
 				<div class="category-left">
@@ -667,8 +667,8 @@
 		</div>
 	</div>
 	<div class="category-row" data-color="c6401d" data-background="F6E7E4" data-category="5">
-	<!--аттрибут data-color - для цвета фильтра и кнопки "В корзину", присваивается для этих элементов в файле scripts/main.js !!! указывается в hex без решетки-->
-	<!--аттрибут data-category - см. data-menu-->
+	<!--атрибут data-color - для цвета фильтра и кнопки "В корзину", присваивается для этих элементов в файле scripts/main.js !!! указывается в hex без решетки-->
+	<!--атрибут data-category - см. data-menu-->
 		<div class="category-out">
 			<div class="category-in">
 				<div class="category-left">
@@ -891,5 +891,102 @@
 			</div>
 		</div>
 	</div>
+	<div class="cart-row">
+		<div class="cart-row-in">
+			<div class="cart-box">
+				<div class="cart-left">
+					<div class="cart-title">Ваша корзина</div>
+					<div class="cart-product-row">
+						<div class="cart-product-one">
+							<div class="cart-product-image">
+								<img src="images/content/pizza-1.png" alt="">
+							</div>
+							<div class="cart-product-info">
+								<div class="cart-ptoduct-title">Пицца «Дары моря»</div>
+								<div class="cart-product-info">Изменить состав</div>
+							</div>
+							<div class="cart-product-weight">450 гр.</div>
+							<div class="cart-product-count">
+								<span class="cart-product-minus"></span>
+								<span class="cart-product-co">1</span>
+								<span class="cart-product-plus"></span>
+							</div>
+							<div class="cart-product-price">749 р.</div>
+							<div class="cart-product-delete"></div>
+						</div>
+						<div class="cart-product-one">
+							<div class="cart-product-image">
+								<img src="images/content/pizza-1.png" alt="">
+							</div>
+							<div class="cart-product-info">
+								<div class="cart-ptoduct-title">Пицца «Дары моря»</div>
+								<div class="cart-product-info">Изменить состав</div>
+							</div>
+							<div class="cart-product-weight">450 гр.</div>
+							<div class="cart-product-count">
+								<span class="cart-product-minus"></span>
+								<span class="cart-product-co">1</span>
+								<span class="cart-product-plus"></span>
+							</div>
+							<div class="cart-product-price">749 р.</div>
+							<div class="cart-product-delete"></div>
+						</div>
+						<div class="cart-product-one">
+							<div class="cart-product-image">
+								<img src="images/content/pizza-1.png" alt="">
+							</div>
+							<div class="cart-product-info">
+								<div class="cart-ptoduct-title">Пицца «Дары моря»</div>
+								<div class="cart-product-info">Изменить состав</div>
+							</div>
+							<div class="cart-product-weight">450 гр.</div>
+							<div class="cart-product-count">
+								<span class="cart-product-minus"></span>
+								<span class="cart-product-co">1</span>
+								<span class="cart-product-plus"></span>
+							</div>
+							<div class="cart-product-price">749 р.</div>
+							<div class="cart-product-delete"></div>
+						</div>
+					</div>
+					<div class="cart-product-total">
+						<span class="">Итого к оплате </span>
+						1549 р.
+					</div>
+					<div class="cart-extra">
+						<div class="cart-extra-title">Добавьте к заказу</div>
+						<div class="cart-extra-cat">
+							<div class="cart-extra-catalog" data-catalog="1">Напитки</div>
+							<div class="cart-extra-catalog" data-catalog="2">Соусы</div>
+							<div class="cart-extra-catalog" data-catalog="3">Десерты</div>
+						</div>
+						<div class="cart-extra-slider" data-catslider="1">
+							<div class="cart-extra-owl">
+								<div class="item">
+									<div class="cart-extra-item">
+										<div class="cart-extra-img-t">
+											<div class="cart-extra-img">
+												<img src="images/content/ap.png" alt="">
+											</div>
+										</div>
+										<div class="cart-extra-title">Сок Фруктовый сад персиковый</div>
+										<div class="cart-extra-weight">1 л</div>
+										<div class="cart-extra-price">100 руб.</div>
+										
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="cart-right">
+					<div class="cart-checkout">
+						<div class="cart-checkout-title">Оформление заказа</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="cart-overlay"></div>
 </body>
 </html>
